redis/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
    service: redis
    env: production
  namespace: eks-redis
spec:
  ports:
    - port: 6379
      name: redis
  selector:
    app: redis
  clusterIP: None
